# cloudlens-project

./: .gitignore  DATABASE_MIGRATION_FIX.sql  DEPLOYMENT.md  EMAIL_SETUP_GUIDE.md  README.md  SETUP_GUIDE.md  TENANT_ISOLATION_FIX.md  TENANT_SCOPED_AUTH_GUIDE.md  docker-compose.yml  env.example  scan-result.json
fastapi-backend/: .env.example  ALEMBIC_README.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml  test_logging_demo.py
fastapi-backend/alembic/: env.py
fastapi-backend/alembic/versions/: 0fda572cfd20_initial_migration.py  f62d80e1f43d_initial_migration.py
fastapi-backend/dbschema/: db_connector.py  model.py
fastapi-backend/src/: config.py  encryption.py  main.py  utils.py
fastapi-backend/src/handlers/: __init__.py  auth.py  cloud_provider_regions.py  dashboard.py  scan_endpoints.py
fastapi-backend/src/jobs/: aws_cloud_scan.py
fastapi-backend/src/middleware/: auth.py
fastapi-backend/src/schemas/: auth.py  aws_services.py  dashboard.py
fastapi-backend/src/services/: email.py
fastapi-backend/src/utils/: logger.py
frontend/: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  makefile  middleware.ts  next.config.ts  openapi.json  package.json  pnpm-lock.yaml  scripts.cmd
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: NewScanModal.tsx  RegionsCards.tsx  RegionsInitializer.tsx  RouteProtection.tsx  ScanServiceResults.tsx  sidebar-layout.tsx
frontend/src/context/: auth-context.tsx  dashboard-context.tsx  regions-context.tsx
(+53 files in other folders)
