[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "boto3>=1.38.36",
    "cryptography>=42.0.0",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.41",
    "supabase>=2.15.3",
    "uvicorn>=0.34.3",
    "workos>=1.13.0",
]
